[gd_scene load_steps=8 format=2]

[ext_resource path="res://Lib/Audio/AudioManager.gd" type="Script" id=1]
[ext_resource path="res://Lib/Audio/Sfx/Famitracker - Track 61 (ExampleSound).wav" type="AudioStream" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Dim"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -6.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -60.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -60.0 ]
}

[sub_resource type="Animation" id=4]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -60.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -6.0, 0.0 ]
}

[node name="AudioManager" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="BGM" type="Node" parent="."]

[node name="BgmCore_DONT_TOUCH_THIS" type="AudioStreamPlayer" parent="BGM"]

[node name="PropertySetterPlayer" type="AnimationPlayer" parent="BGM/BgmCore_DONT_TOUCH_THIS"]
anims/Dim = SubResource( 1 )
anims/FadeIn = SubResource( 2 )
anims/FadeOutNoStop = SubResource( 3 )
anims/FadeOutStop = SubResource( 4 )
anims/Undim = SubResource( 5 )

[node name="SFX" type="Node" parent="."]

[node name="Sfx_Example" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 2 )
volume_db = -12.0
